<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="30dp"
tools:context=".Login_form">

<ImageView
    android:id="@+id/img_login"
    android:layout_width="348dp"
    android:layout_height="206dp"
    android:padding="50dp"
    android:src="@drawable/loginfclogo" />
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:textColorHint="@color/colorAccent"
    android:layout_marginTop="5dp"
    >
    <EditText
        android:id="@+id/edittext_userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        android:ems="10"
        android:background="#ffffff"
        android:inputType="text"
        android:textSize="22sp"/>
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:textColorHint="@color/colorAccent"
    android:layout_marginTop="5dp"
    app:passwordToggleEnabled="true"
    >
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:ems="10"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:textSize="22sp"
        />
</com.google.android.material.textfield.TextInputLayout>
<Button
    android:id="@+id/loginbtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:onClick="Loginform"
    android:textSize="22sp"
    android:textColor="#000000"
    android:layout_marginTop="40dp"
    android:background="@drawable/button_rounded"
    />

<Button
    android:id="@+id/btn_signin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sign_up"
    android:textSize="22sp"
    android:textColor="#000000"
    android:layout_marginTop="10dp"
    android:background="@drawable/button_rounded"
    android:onClick="btn_signupForm"/>
</LinearLayout>